test/fixtures/fail.tap
TAP version 13
# pass
ok 1 should pass
# fail
not ok 2 should fail
  ---
    operator: ok
    expected: true
    actual:   false
    at: Test.<anonymous> (/Users/zoubin/usr/src/self/tap-summary/example/error.js:9:5)
    stack: |-
      Error: should be deeply equivalent
          at Test.assert [as _assert] (/Users/ww/project/node_modules/tape/lib/test.js:314:54)
          at Test.bound [as _assert] (/Users/ww/project/node_modules/tape/lib/test.js:99:32)
          at Test.tapeDeepEqual (/Users/ww/project/node_modules/tape/lib/test.js:555:10)
          at Test.bound [as deepEquals] (/Users/ww/project/node_modules/tape/lib/test.js:99:32)
          at Test.<anonymous> (/Users/ww/project/src/env-vars.spec.js:28:5)
          at Test.bound [as _cb] (/Users/ww/project/node_modules/tape/lib/test.js:99:32)
          at Test.run (/Users/ww/project/node_modules/tape/lib/test.js:117:31)
          at Test.bound [as run] (/Users/ww/project/node_modules/tape/lib/test.js:99:32)
          at Immediate.next [as _onImmediate] (/Users/ww/project/node_modules/tape/lib/results.js:88:19)
          at processImmediate (internal/timers.js:464:21)
  ...
# pass and fail
ok 3 should pass
not ok 4 should fail
  ---
    operator: ok
    expected: true
    actual:   false
    at: Test.<anonymous> (/Users/zoubin/usr/src/self/tap-summary/example/error.js:15:5)
  ...

1..4
# tests 4
# pass  2
# fail  2

